changes to cards(new)

--- a/index.html
+++ b/index.html
@@ -186,50 +186,57 @@
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid big">
-      <div class="new-card-row">
-        <div class="new-card">
-          <div class="new-card-col new-left">
-            <img src="imgs/ware.jpg" alt="">
-          </div>
-          <div class="new-card-col new-right">
-            <p><h6>Full-line stocking distributor</h6> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.
-            </p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="new-card-row">
+            <div class="new-card">
+              <div class="new-card-col new-left">
+                <img src="imgs/ware.jpg" alt="">
+              </div>
+              <div class="new-card-col new-right">
+                <p><h6>Full-line stocking distributor</h6> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.
+                </p>
+              </div>
+            </div>
+
+            <div class="new-card">
+              <div class="new-card-col new-left">
+                <p><h6>Long-term inside and outside sales</h6> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.
+                </p>
+
+              </div>
+              <div class="new-card-col new-right">
+                  <img src="imgs/sales.jpg" alt="">
+              </div>
+            </div>
+            <div class="new-card">
+              <div class="new-card-col new-left">
+                <img src="imgs/tools.jpg" alt="">
+              </div>
+              <div class="new-card-col new-right">
+                <p><h6>Experienced personnel</h6> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.</p>
+
+              </div>
+            </div>
+
+            <div class="new-card">
+              <div class="new-card-col new-left">
+                <p><h6>Long-term trading relationships</h6> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.</p>
+
+              </div>
+              <div class="new-card-col new-right">
+                <img src="imgs/trading.jpg" alt="">
+              </div>
+            </div>
           </div>
         </div>
+        <div class="col-md-6">
+          *PRODUCTS AREA*
 
-        <div class="new-card">
-          <div class="new-card-col new-left">
-            <p><h6>Long-term inside and outside sales</h6> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.
-            </p>
-
-          </div>
-          <div class="new-card-col new-right">
-              <img src="imgs/sales.jpg" alt="">
-          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="new-card">
-          <div class="new-card-col new-left">
-            <img src="imgs/tools.jpg" alt="">
-          </div>
-          <div class="new-card-col new-right">
-            <p><h6>Experienced personnel</h6> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.</p>
-
-          </div>
-        </div>
-
-        <div class="new-card">
-          <div class="new-card-col new-left">
-            <p><h6>Long-term trading relationships</h6> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.</p>
-
-          </div>
-          <div class="new-card-col new-right">
-            <img src="imgs/trading.jpg" alt="">
-          </div>
-        </div>
-
-
-
       </div>
+
     <!-- Corporate resp + news sec -->
     <div class="row justify-content-center">
       <div class="col-md-4 xtr-cont">
@@ -242,7 +249,7 @@
 
             <strong>Laner Electric Supply CEO
             Sandra Escalante</strong>
-          currently serves on 5 different boards focused on
+          currently serves on numerous boards and business advisory councils focused on
           benefitting multiple aspects of our community:
 
           <br>
@@ -253,7 +260,7 @@
           <br>
           <br>
 
-          <em>BuildOut California - Founding Member + Secretary</em>
+          <em>BuildOut California - Founding Board Member and Secretary</em>
 
           <br>
           <br>
@@ -268,7 +275,7 @@
           <br>
           <br>
 
-          <em>Richmond Workforce</em>
+          <em>Richmond Workforce Development Board - Board Member</em>
 
           <br>
           <br>
@@ -335,7 +342,7 @@
 
             <img src="projects/SFMTA-2.jpg" alt="">
             <div class="overlay_fade">
-              <p><strong>Central Subway, Chinatown<br>San Francisco, CA</strong> <br> Fisk Electric</p>
+              <p><strong>Central Subway,<br> Chinatown, Moscone and Union Square<br>San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
@@ -402,9 +409,11 @@
             <div class="carousel-item active">
               <div class="d-block w-100">
                 <h1>Affiliations</h1><br>
-                <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="150h3px"></a>
-                <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="150h3px"></a>
-                <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="150h3px"></a>
+                <a href="#"> <img class="car" src="imgs/buildca.jpg" height="120h3px"alt=""> </a>
+
+                <a href="https://www.imarkgroup.com/index.asp"><img class='car'src="imgs/Imark.jpg" height="80h3px"></a>
+                <a href="https://ggba.com/business-directory/"><img class='car'src="imgs/GGBA.jpg" height="80h3px"></a>
+                <a href="https://councilofindustries.org/coi-members/"><img class='car'src="imgs/WCOI.jpg" height="80h3px"></a>
               </div>
             </div>
             <div class="carousel-item">
