--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="title">
         <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""> </a>
         <h1 data-aos="fade-left"id="laner_electric">Laner Electric Supply</h1>
-        <h2 data-aos="fade-up" style="color: #F5D547;">Woman/Minority/LGBTQ Owned Small Business</h2>
-        <h3 data-aos="fade-right"id ="slogan">SERVING QUALITY DRIVEN BUILDERS SINCE 1984</h3>
+        <h2 data-aos="fade-up" style="color: #fff;">Woman/Minority/LGBTQ Owned Small Business</h2>
+        <h3 data-aos="fade-right"style="color: #F5D547"id ="slogan">SERVING QUALITY DRIVEN BUILDERS SINCE 1984</h3>
         <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x fic" aria-hidden="true"></a></div>
       </div>
 
@@ -71,6 +71,8 @@
               <a class="dropdown-item" href="Capability Statement 2020.pdf"download="cs.pdf">Capability Statement</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
+              <a class="dropdown-item" href="Laner Line Card.pdf"download="Laner Line Card.pdf">Line Card</a>
+
             </div>
           </li>
           <a href="tel:510-215-5100"class="nav-item mobl">Call (510) 215-5100</a>
